<resources>
    <string name="app_name">Recipe Book</string>
     <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found..</string>
    <string name="no_fav_found">No favorite found..</string>
    <string name="invalid">Invalid sign salt.</string>
    <string name="no_data">No data fount..</string>
    <string name="search_recipe">Search Recipes</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: info@viaviweb.com or viaviwebtech@gmail.com</string>
    <string name="restart_msg">Please restart your app something went to wrong</string>

    <string name="home_view_all">See All</string>
    <string name="detail_ingredient">Ingredients</string>
    <string name="detail_direction">Directions</string>
    <string name="share_message">Download app from this link</string>
    <string name="share_recipe_title">Recipe Title :- </string>
    <string name="share_recipe_ingredient">Recipe Ingredient :- </string>
    <string name="share_recipe_direction">Recipe Direction :- </string>
    <string name="share_recipe_video">Recipe Video :- </string>

    <string name="dialog_error">Error...</string>
    <string name="dialog_warning">Warning...</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_no">NO</string>
    <string name="login_require">Login require click OK and go to login screen</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="dialog_logout">Logout</string>

     <string name="network_msg">No Network Connection!!!</string>
    <string name="no_data_found">No data found!!</string>

    <!--Drawer Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_most">Most View</string>
    <string name="menu_category">Categories</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_more">More App</string>
    <string name="menu_share">Share App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="notification_title">Enable Push Notification</string>
    <string name="loading">Loading...</string>

    <string name="home_category">Categories</string>
    <string name="home_latest">Latest Recipe</string>
    <string name="home_popular">Popular Recipe</string>
    <string name="title_review">Reviews</string>
    <string name="no_review">No review found</string>
    <string name="rating">Rate &amp; Reviews</string>
    <string name="rating_title">Your Message :-</string>
    <string name="write_here">Write Here</string>
    <string name="submit">Submit</string>
    <string name="require_review">Add review</string>

    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password_login">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="send">Send</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="phone_login">Phone</string>

    <string name="favourite_remove">Remove from favorite</string>
    <string name="favourite_add">Added to favorite</string>
    <string name="permission_request">You cannot see images without requested permission</string>

    <string name="more_app_url">https://play.google.com/store/apps/developer?id=Vishal+Android+Apps</string>

    <string name="gdpr_privacy_link">https://termsfeed.com/blog/privacy-policy-admob/</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <!-- youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>

    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="exit_msg">Are You Sure You Want To Quit?</string>
</resources>
