<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/d_home"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/d_latest"
            android:title="@string/menu_latest" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/d_categories"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_most"
            android:icon="@drawable/ic_most_view"
            android:title="@string/menu_most" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/d_favorites"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/menu_go_login"
            android:checkable="false"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/menu_go_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>


</menu>
